--- a/AppEval/AppEval.csproj
+++ b/AppEval/AppEval.csproj
@@ -64,6 +64,12 @@
     <Compile Include="AjoutCritere.Designer.cs">
       <DependentUpon>AjoutCritere.cs</DependentUpon>
     </Compile>
+    <Compile Include="Evaluation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Evaluation.Designer.cs">
+      <DependentUpon>Evaluation.cs</DependentUpon>
+    </Compile>
     <Compile Include="Passerelle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
