--- a/AppEval/AppEval.csproj
+++ b/AppEval/AppEval.csproj
@@ -70,6 +70,12 @@
     <Compile Include="Evaluation.Designer.cs">
       <DependentUpon>Evaluation.cs</DependentUpon>
     </Compile>
+    <Compile Include="OffreCritereDRH.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OffreCritereDRH.Designer.cs">
+      <DependentUpon>OffreCritereDRH.cs</DependentUpon>
+    </Compile>
     <Compile Include="Passerelle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -78,6 +84,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Evaluation.resx">
       <DependentUpon>Evaluation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OffreCritereDRH.resx">
+      <DependentUpon>OffreCritereDRH.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
