--- a/AppEval/AppEval.csproj
+++ b/AppEval/AppEval.csproj
@@ -68,6 +68,12 @@
       <DependentUpon>AjoutCritere.cs</DependentUpon>
     </Compile>
     <Compile Include="Associer.cs" />
+    <Compile Include="Authentification.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Authentification.Designer.cs">
+      <DependentUpon>Authentification.cs</DependentUpon>
+    </Compile>
     <Compile Include="Candidature.cs" />
     <Compile Include="Connexion.cs" />
     <Compile Include="ConnexionRH.cs">
@@ -76,14 +82,13 @@
     <Compile Include="ConnexionRH.Designer.cs">
       <DependentUpon>ConnexionRH.cs</DependentUpon>
     </Compile>
-    <Compile Include="ConnexioOdoo.cs" />
     <Compile Include="Critere.cs" />
     <Compile Include="DAOEvaluation.cs" />
     <Compile Include="DAOAssocier.cs" />
     <Compile Include="DAOCritere.cs" />
     <Compile Include="DAONoter.cs" />
     <Compile Include="DAOOffre.cs" />
-    <Compile Include="DOAConnectOdoo.cs" />
+    <Compile Include="DAOConnectOdoo.cs" />
     <Compile Include="EvaluationRH.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -109,6 +114,9 @@
     </Compile>
     <EmbeddedResource Include="AjoutCritere.resx">
       <DependentUpon>AjoutCritere.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Authentification.resx">
+      <DependentUpon>Authentification.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ConnexionRH.resx">
       <DependentUpon>ConnexionRH.cs</DependentUpon>
