--- a/AppEval/App.config
+++ b/AppEval/App.config
@@ -11,4 +11,16 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="sioserviceBinding" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost/projetppe/web_service/sioservice.php"
+        binding="basicHttpBinding" bindingConfiguration="sioserviceBinding"
+        contract="ServiceReference1.sioservicePort" name="sioservicePort" />
+    </client>
+  </system.serviceModel>
 </configuration>
