--- a/AppEval/App.config
+++ b/AppEval/App.config
@@ -18,7 +18,7 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost/projetppe/web_service/sioservice.php"
+      <endpoint address="http://localhost:8181/projetppe/web_service/sioservice.php"
         binding="basicHttpBinding" bindingConfiguration="sioserviceBinding"
         contract="ServiceReference1.sioservicePort" name="sioservicePort" />
     </client>
