--- a/AppEval/AppEval.csproj
+++ b/AppEval/AppEval.csproj
@@ -143,7 +143,7 @@
     <None Include="Connected Services\ServiceReference1\AppEval.ServiceReference1.exportOffreListResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Connected Services\ServiceReference1\sioservice.wsdl" />
+    <None Include="Connected Services\ServiceReference1\sioservice1.wsdl" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
